Fix T56872: Edge slide gives invalid normals

Add the ability to skip overwriting normals.