source/blender/bmesh/intern/bmesh_construct.h
@@ -55,7 +55,7 @@ BMFace *BM_face_create_ngon_verts(
 
 void BM_elem_attrs_copy_ex(
         BMesh *bm_src, BMesh *bm_dst, const void *ele_src_v, void *ele_dst_v,
-        const char hflag_mask);
+        const char hflag_mask, const uint64_t cd_mask);
 void BM_elem_attrs_copy(BMesh *bm_src, BMesh *bm_dst, const void *ele_src_v, void *ele_dst_v);
 void BM_elem_select_copy(BMesh *bm_dst, void *ele_dst_v, const void *ele_src_v);
 
